--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@cloudinary/url-gen": "1.10.1",
     "dropzone": "6.0.0-beta.2",
+    "g": "^2.0.1",
+    "npm": "^9.7.2",
     "two-up-element": "1.0.1"
   }
 }
